[package]
name = "multiplex"
version = "0.1.0"
authors = ["Joseph Harrison-Lim <Josephharrisonlim@gmail.com>"]
edition = "2018"
description = "A key value store with pub/sub capabilities"
keywords = ["pub", "sub", "key", "value", "cache"]
license = "Apache-2.0"
repository = "https://github.com/jharrilim/Multiplex"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0"
atomic-counter = "1.0.1"
awc = "1.0.1"
chashmap = "2.2.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bytes = "0.5.5"
